[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/player/playerProjectiles/playerBullet.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.05
height = 0.1
radial_segments = 15
rings = 15

[sub_resource type="SphereShape" id=2]
radius = 4.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
scale = 5.0
scale_curve = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )

[node name="playerBullet" type="Area"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, -2.18557e-06, -50, 0, 50, -2.18557e-06, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="bulletDespawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Particles2" type="Particles" parent="."]
emitting = false
amount = 32
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="particlesTimeWai" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
